<resources>
    <!--    clean these-->
    <string name="app_name">To-Do</string>
    <string name="all_tasks_fragment_label">All Tasks</string>
    <string name="new_task_fragment_label">New Task</string>
    <string name="add_a_new_task">Add a new task</string>
    <string name="high_priority">High</string>
    <string name="medium_priority">Medium</string>
    <string name="low_priority">Low</string>
    <string name="task_title">Task title</string>
    <string name="task_description">Task description</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="priority">Priority</string>
</resources>